Update analytics, fix sync and agent features, added analysis history

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/google": "^3.0.5",
     "@ai-sdk/openai": "^3.0.7",
+    "@ai-sdk/openai-compatible": "^2.0.4",
     "@ai-sdk/react": "^3.0.16",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
@@ -31,11 +32,14 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "node-cron": "^4.2.1",
+    "node-fetch": "^3.3.2",
     "prisma": "^7.2.0",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
     "recharts": "^3.6.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.4"
   },
