--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "build:image": "bash scripts/build-image.sh"
   },
   "dependencies": {
     "@ai-sdk/google": "^3.0.5",
