--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Lowercase Repo Name
+        run: echo "REPO_LC=${GITHUB_REPOSITORY,,}" >> ${GITHUB_ENV}
+
       - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
@@ -43,11 +46,11 @@ jobs:
           push: true
           platforms: linux/amd64
           tags: |
-            ghcr.io/${{ github.repository }}/ads-tracker-web:latest
+            ghcr.io/${{ env.REPO_LC }}/ads-tracker-web:latest
           cache-from: |
-            type=registry,ref=ghcr.io/${{ github.repository }}/ads-tracker-web:buildcache
+            type=registry,ref=ghcr.io/${{ env.REPO_LC }}/ads-tracker-web:buildcache
           cache-to: |
-            type=registry,mode=max,ref=ghcr.io/${{ github.repository }}/ads-tracker-web:buildcache
+            type=registry,mode=max,ref=ghcr.io/${{ env.REPO_LC }}/ads-tracker-web:buildcache
 
       - name: "Optional: push runtime image to latest"
         if: always()
